fixed overflow x on the body by adding overflow_wrapper div inside of body of public/index.html, also added text-align center on mobile version in services block

--- a/src/components/LandingPageBlocks/ServicesBlock/ServicesBlock.css
+++ b/src/components/LandingPageBlocks/ServicesBlock/ServicesBlock.css
@@ -21,6 +21,7 @@
 .servicesTitle {
   margin-bottom: 80px;
   color: #171725;
+  text-align: center;
 }
 .servicesButtonBox {
   display: -webkit-box;
