--- a/src/index.css
+++ b/src/index.css
@@ -50,7 +50,8 @@ time, mark, audio, video {
 	font-size: 100%;
 	font: inherit;
 	vertical-align: baseline;
-	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	     box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -65,7 +66,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   line-height: 1;
-  overflow-x: hidden;
 }
 ol, ul {
 	list-style: none;
@@ -90,5 +90,10 @@ a {
 	text-decoration: none;
 }
 * {
-	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	     box-sizing: border-box;
+}
+
+.overflow_wrapper {
+	overflow-x: hidden;
 }
